deploy/additional-deploy-solutions/02-canary-demo-v2-deployment.yml
---
# Source: product-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-app-v2
  labels:
    app.kubernetes.io/name: product-app
    app.kubernetes.io/instance: product-app-canary
    app.kubernetes.io/version: "1.16.2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: product-app
      app.kubernetes.io/instance: product-app-canary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: product-app
        app.kubernetes.io/instance: product-app-canary
    spec:
      serviceAccountName: product-app
      securityContext:
        {}
      containers:
        - name: product-app-v2
          securityContext:
            {}
          image: "dm0610/products-api:main-v2"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /products
              port: http
          readinessProbe:
            httpGet:
              path: /products
              port: http
          resources:
            {}
