deploy/additional-deploy-solutions/01-blue-green-service.yml
---
# Source: product-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-app
  labels:
    app.kubernetes.io/name: product-app
    app.kubernetes.io/instance1: product-app-blue
    #app.kubernetes.io/instance2: product-app-green
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    #app.kubernetes.io/name: product-app
    app.kubernetes.io/instance1: product-app-blue ## переключаем туда-сюда
    #app.kubernetes.io/instance2: product-app-green
